# Leet-Code_journey

Algorithms/: Binary_search_algorithm.py  Dutch_flag_algorithm.py  Kadane_Algorithm.py  Majority_elements.py  Pair_sum.py  Sorting_algorithms.py  a.out  next_permutation.cpp  reverse.cpp  sorting.cpp
Daily Problems/: Day17_Find-largestarea_square-inRectangle.py  Day_03_pyramidTransitionMatrix.py  Day_06_Plus_one.py  Day_08_N0.ofwaystopaintN*3grid.py  Day_09_Four-Divisors.py  Day_11_Maximum-Product-splittedTree.py  Day_12_MaxDotProduct_TwoSubSequences.py  Day_13_Separate-Square_1.py  Day_14_Separate_SquaresII.py  Day_15_MaximizeAreaSqaureHoleGrid.py  Day_16_Maximum_SquareAreabyRemovingfences.py  Day_18_Largest_magic_square.py  Dy_10_Maximum-matrix-Sum.py  day_07_N-RepeatedElements_in2Narray.py
Daily Problems/Ai Orchestration (Social-media)/backend/: pyproject.toml
Dsa CPP/: LL.cpp  a.out  oops.cpp  stack.cpp  stackSTL.cpp  vectors.cpp
Leetcode-problems/: P_04_Remove_duplicatesFrom_sortedarray.py  P_05_Next_permutaion_medium.py  P_06_Soduku-solver.py  P_09_Zigzag-Conversion.py  P_10_Container-With-Mostwater.py  P_11_Binary_exponentiation.py  P_12_Buy_sell_stock.py  P_13_Product-of-array_ex-self.py  P_14_Search-in-rotated_array.py  P_15_Peak_indexIn_sorted Array.py  P_16_Single-element-insorted-array.py  P_17_BookAllocation.py  P_18_Painterspartition.py  P_19-AggressiveCow.py  P_20_Sort-array_0sand_1s.py  P_21_Merge2SortedArrays.py  P_22_NextPermutation.py  P_23_Valid_palindrome.py  P_24_RemoveAllOcurrences.py  P_25_Permutations_in_string.py  P_27_ReverseLL.cpp  a.out  (+1 more)
(+11 files in other folders)
