[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "fastapi-limiter>=0.1.6",
    "gunicorn>=23.0.0",
    "kombu>=5.6.2",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "openai>=2.15.0",
    "opencv-python>=4.13.0.90",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "orjson>=3.11.5",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "prometheus-client>=0.24.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "sentry-sdk>=2.49.0",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "faker>=40.1.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
